--- a/.github/workflows/kubeproxy_iptables_clusterip.yml
+++ b/.github/workflows/kubeproxy_iptables_clusterip.yml
@@ -13,6 +13,12 @@ jobs:
         with:
            path: main
 
+          # Setup Go
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16' # The Go version to download (if necessary) and use.
+    
       - uses: actions/checkout@master
         with:
           repository: K8sbykeshed/k8s-local-dev
