--- a/.github/workflows/kubeproxy_iptables_clusterip.yml
+++ b/.github/workflows/kubeproxy_iptables_clusterip.yml
@@ -31,7 +31,7 @@ jobs:
           pushd ./main
             mkdir -p downloads
             go get github.com/thekubeworld/k8devel
-            go run ./tests/clusterip/main.go &> downloads/clusterip-test-output.log
+            go run ./tests/clusterip/main.go
           popd
       - uses: actions/upload-artifact@v2
         with:
