--- a/.github/workflows/kubeproxy_iptables_clusterip.yml
+++ b/.github/workflows/kubeproxy_iptables_clusterip.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.16' # The Go version to download (if necessary) and use.
+          go-version: '1.16.3' # The Go version to download (if necessary) and use.
     
       - uses: actions/checkout@master
         with:
@@ -31,6 +31,8 @@ jobs:
           pushd ./main
             mkdir -p downloads
             go get github.com/thekubeworld/k8devel
+            go get github.com/gookit/color
+            go get github.com/sirupsen/logrus
             go run ./tests/clusterip/main.go
           popd
       - uses: actions/upload-artifact@v2
