--- a/.github/workflows/kubeproxy_iptables_clusterip.yml
+++ b/.github/workflows/kubeproxy_iptables_clusterip.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.16.3' # The Go version to download (if necessary) and use.
+          go-version: '1.16.0-rc1' # The Go version to download (if necessary) and use.
     
       - uses: actions/checkout@master
         with:
