--- a/.github/workflows/iptables_kubeproxy_nodeport.yml
+++ b/.github/workflows/iptables_kubeproxy_nodeport.yml
@@ -1,4 +1,4 @@
-name: "kube-proxy iptables test job"
+name: "iptables kube-proxy nodeport test job"
 on:
   workflow_dispatch:
   schedule:
@@ -6,7 +6,7 @@ on:
     - cron: '00 15 * * *'
 
 jobs:
-  kube-proxy-iptables-test-job:
+  iptables-kube-proxy-nodeport-test-job:
     runs-on: [ ubuntu-18.04 ]
     steps:
       - uses: actions/checkout@v2
