--- a/.github/workflows/iptables_kubeproxy_loadbalancer.yml
+++ b/.github/workflows/iptables_kubeproxy_loadbalancer.yml
@@ -33,7 +33,9 @@ jobs:
             go get github.com/thekubeworld/k8devel
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
-            go run ./tests/loadbalancer/main.go
+            pushd ./tests/loadbalancer/
+               go run main.go
+            popd
           popd
       - uses: actions/upload-artifact@v2
         with:
