--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -6,7 +6,7 @@ on:
     - cron: '00 15 * * *'
 
 jobs:
-  kube-proxy-iptables-test-job:
+  iptables-clusterip-cni-kindnetd:
     runs-on: [ ubuntu-18.04 ]
     steps:
       - uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
             go get github.com/thekubeworld/k8devel
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
-            go run ./tests/clusterip/main.go
+            go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
         with:
