--- a/.github/workflows/ipvs_kubeproxy_loadbalancer.yml
+++ b/.github/workflows/ipvs_kubeproxy_loadbalancer.yml
@@ -1,4 +1,4 @@
-name: "ipvs loadbalancer - CNI: kindnetd"
+name: "ipvs kubeproxy loadbalancer - CNI: kindnetd"
 on:
   workflow_dispatch:
   schedule:
@@ -6,7 +6,7 @@ on:
     - cron: '00 15 * * *'
 
 jobs:
-  kube-proxy-ipvs-test-job:
+  ipvs-kubeproxy-loadbalancer-cni-kindnetd:
     runs-on: [ ubuntu-18.04 ]
     steps:
       - uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
             pushd ./tests/loadbalancer/
-               go run main.go
+               go run main.go &> ../../downloads/output_kubeproxy_iptables_clusterip.log
             popd
           popd
       - uses: actions/upload-artifact@v2
