--- a/.github/workflows/ipvs_kubeproxy_nodeport.yml
+++ b/.github/workflows/ipvs_kubeproxy_nodeport.yml
@@ -1,4 +1,4 @@
-name: "ipvs nodeport - CNI: kindnetd"
+name: "ipvs kubeproxy nodeport - CNI: kindnetd"
 on:
   workflow_dispatch:
   schedule:
@@ -6,7 +6,7 @@ on:
     - cron: '00 15 * * *'
 
 jobs:
-  ipvs-kube-proxy-nodeport-test-job:
+  ipvs-kubeproxy-nodeport-cni-kindnetd:
     runs-on: [ ubuntu-18.04 ]
     steps:
       - uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
             go get github.com/thekubeworld/k8devel
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
-            go run ./tests/nodeport/main.go
+            go run ./tests/nodeport/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
         with:
