--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -30,9 +30,9 @@ jobs:
           popd
           pushd ./main
             mkdir -p downloads
-            go get -u github.com/thekubeworld/k8devel
-            go get -u github.com/gookit/color
-            go get -u github.com/sirupsen/logrus
+            go get github.com/thekubeworld/k8devel
+            go get github.com/gookit/color
+            go get github.com/sirupsen/logrus
             go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
