--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -31,9 +31,7 @@ jobs:
           pushd ./main
             mkdir -p downloads
             go get github.com/thekubeworld/k8devel
-            go get github.com/gookit/color
-            go get github.com/sirupsen/logrus
-            go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
+            go run ./tests/clusterip/main.go #&> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
         with:
