--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -13,7 +13,12 @@ jobs:
         with:
            path: main
 
-          # Setup Go
+        # Setup Go
+      - name: setup env
+        shell: bash
+        run: |
+          echo "::set-env name=GOPATH::${{ github.workspace }}/go"
+          echo "::add-path::${{ github.workspace }}/go/bin"
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
@@ -29,7 +34,6 @@ jobs:
             ./k8s-local-dev kindnetd
             go get -u -v github.com/thekubeworld/k8devel
             go get github.com/gookit/color
-            ls -R ~/go/src/github.com
           popd
           pushd ./main
             mkdir -p downloads
