--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -28,6 +28,7 @@ jobs:
             ./k8s-local-dev kindnetd
             GO111MODULE=off go get -u -v github.com/thekubeworld/k8devel
             GO111MODULE=off github.com/gookit/color
+            ls -R /home/runner/go/src/github.com/thekubeworld/k8devel
           popd
           pushd ./main
             mkdir -p downloads
