--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -26,8 +26,9 @@ jobs:
       - run: |
           pushd ./k8s-local-dev
             ./k8s-local-dev kindnetd
-            GO111MODULE=on go get -u -v github.com/thekubeworld/k8devel
-            GO111MODULE=on go get -u -v github.com/gookit/color
+            go get -u -v github.com/thekubeworld/k8devel
+            go get -u -v github.com/gookit/color
+            go get -v -t -d ./...
           popd
           pushd ./main
             mkdir -p downloads
