--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -18,7 +18,12 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '1.16.1' # The Go version to download (if necessary) and use.
-   
+  
+      - name: Install dependencies
+        run: |
+            go get -u -v github.com/thekubeworld/k8devel
+            go get -u -v github.com/gookit/color
+
       - uses: actions/checkout@master
         with:
           repository: thekubeworld/k8s-local-dev
@@ -26,9 +31,6 @@ jobs:
       - run: |
           pushd ./k8s-local-dev
             ./k8s-local-dev kindnetd
-            go get -u -v github.com/thekubeworld/k8devel
-            go get -u -v github.com/gookit/color
-            go get -v -t -d ./...
           popd
           pushd ./main
             mkdir -p downloads
