--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -23,7 +23,6 @@ jobs:
         run: |
             go get -u -v github.com/thekubeworld/k8devel
             go get -u -v github.com/gookit/color
-            ls -R "/home/runner/go"
       - uses: actions/checkout@master
         with:
           repository: thekubeworld/k8s-local-dev
@@ -34,6 +33,8 @@ jobs:
           popd
           pushd ./main
             mkdir -p downloads
+            go get -u -v github.com/thekubeworld/k8devel
+            go get -u -v github.com/gookit/color
             go run ./tests/clusterip/main.go #&> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
