--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -32,7 +32,7 @@ jobs:
             go get github.com/thekubeworld/k8devel/pkg/client 
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
-            go run ./tests/clusterip/main.go #&> downloads/output_kubeproxy_iptables_clusterip.log
+            go build ./tests/clusterip/main.go #&> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
         with:
