--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -28,7 +28,7 @@ jobs:
           popd
           pushd ./main
             mkdir -p downloads
-            echo "GO111MODULE=auto" >> $GITHUB_ENV
+            #echo "GO111MODULE=auto" >> $GITHUB_ENV
             go get github.com/thekubeworld/k8devel/pkg/client 
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
