--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -29,6 +29,7 @@ jobs:
           pushd ./main
             mkdir -p downloads
             #echo "GO111MODULE=auto" >> $GITHUB_ENV
+            go get github.com/moby/spdystream
             go get github.com/thekubeworld/k8devel/pkg/client 
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
