--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -28,12 +28,11 @@ jobs:
           popd
           pushd ./main
             mkdir -p downloads
-            #echo "GO111MODULE=auto" >> $GITHUB_ENV
             go get github.com/moby/spdystream
             go get github.com/thekubeworld/k8devel/pkg/client 
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
-            go run ./tests/clusterip/main.go #&> downloads/output_kubeproxy_iptables_clusterip.log
+            go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
         with:
