--- a/.github/workflows/ipvs_kubeproxy_clusterip.yml
+++ b/.github/workflows/ipvs_kubeproxy_clusterip.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.15.0' # The Go version to download (if necessary) and use.
+          go-version: '1.15.11' # The Go version to download (if necessary) and use.
     
       - uses: actions/checkout@master
         with:
@@ -30,7 +30,8 @@ jobs:
           popd
           pushd ./main
             mkdir -p downloads
-            go get github.com/thekubeworld/k8devel
+            go get github.com/moby/spdystream
+            go get github.com/thekubeworld/k8devel/pkg/client
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
             go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_ipvs_clusterip.log
