--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -30,11 +30,11 @@ jobs:
             mkdir -p downloads
             # from the tests in the github actions setting env GO111MODULE=off
             # or auto doesn't affect the system, need to set off for each command
-            GO111MODULE=off go get github.com/moby/spdystream
-            GO111MODULE=off go get github.com/thekubeworld/k8devel/pkg/client 
-            GO111MODULE=off go get github.com/gookit/color
-            GO111MODULE=off go get github.com/sirupsen/logrus
-            GO111MODULE=off go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
+            GO111MODULE=on go get github.com/moby/spdystream
+            GO111MODULE=on go get github.com/thekubeworld/k8devel/pkg/client 
+            GO111MODULE=on go get github.com/gookit/color
+            GO111MODULE=on go get github.com/sirupsen/logrus
+            GO111MODULE=on go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
         with:
