--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -34,7 +34,7 @@ jobs:
             GO111MODULE=on go get github.com/thekubeworld/k8devel/pkg/client 
             GO111MODULE=on go get github.com/gookit/color
             GO111MODULE=on go get github.com/sirupsen/logrus
-            GO111MODULE=on go run ./tests/clusterip/main.go &> downloads/output_kubeproxy_iptables_clusterip.log
+            GO111MODULE=on go run ./tests/clusterip/main.go #&> downloads/output_kubeproxy_iptables_clusterip.log
           popd
       - uses: actions/upload-artifact@v2
         with:
