--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: [ ubuntu-18.04 ]
     env:
       GOPATH: /home/runner/work/k8devel/go
-      GO111MODULE: auto
+    #GO111MODULE: auto
     steps:
       - uses: actions/checkout@v2
         with:
