--- a/.github/workflows/ipvs_kubeproxy_nodeport.yml
+++ b/.github/workflows/ipvs_kubeproxy_nodeport.yml
@@ -8,8 +8,9 @@ on:
 jobs:
   ipvs-kubeproxy-nodeport-cni-kindnetd:
     runs-on: [ ubuntu-18.04 ]
-    GOPATH: /home/runner/work/k8devel/go
-    GO111MODULE: auto
+    env:
+      GOPATH: /home/runner/work/k8devel/go
+      GO111MODULE: auto
     steps:
       - uses: actions/checkout@v2
         with:
