--- a/.github/workflows/mirrorbykeshed.yml
+++ b/.github/workflows/mirrorbykeshed.yml
@@ -11,17 +11,17 @@ jobs:
       - name: sycnmain
         uses: wei/git-sync@v3
         with:
-          source_repo: "git@github.com:thekubeworld/k8devel.git"
+          source_repo: "git@github.com:thekubeworld/kubeproxy-testing.git"
           source_branch: "main"
-          destination_repo: "git@github.com:K8sbykeshed/k8devel.git"
+          destination_repo: "git@github.com:K8sbykeshed/kubeproxy-testing.git"
           destination_branch: "main"
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} # optional, will override `SSH_PRIVATE_KEY`
       - name: synctags
         uses: wei/git-sync@v3
         with:
-          source_repo: "git@github.com:thekubeworld/k8devel.git"
+          source_repo: "git@github.com:thekubeworld/kubeproxy-testing.git"
           source_branch: "refs/tags/*"
-          destination_repo: "git@github.com:K8sbykeshed/k8devel.git"
+          destination_repo: "git@github.com:K8sbykeshed/kubeproxy-testing.git"
           destination_branch: "refs/tags/*"
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} # optional, will override `SSH_PRIVATE_KEY`
 
