--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   iptables-kubeproxy-clusterip-cni-kindnetd:
-    runs-on: [ ubuntu-18.04 ]
+    runs-on: [ self-hosted ]
     env:
       GOPATH: /home/runner/work/k8devel/go
       GO111MODULE: auto
