--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -26,6 +26,8 @@ jobs:
           repository: thekubeworld/k8s-local-dev
           path: k8s-local-dev
       - run: |
+          apt update -y
+          apt install patch -y
           pushd ./k8s-local-dev
             ./k8s-local-dev kindnetd
           popd
