--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   iptables-kubeproxy-clusterip-cni-kindnetd:
-    runs-on: [ self-hosted ]
+    runs-on: self-hosted
     env:
-      GOPATH: /home/runner/work/k8devel/go
+      GOPATH: /home/runner/work/_temp/go
       GO111MODULE: auto
     steps:
       - uses: actions/checkout@v2
@@ -26,21 +26,21 @@ jobs:
           repository: thekubeworld/k8s-local-dev
           path: k8s-local-dev
       - run: |
+          GO111MODULE="on" go get sigs.k8s.io/kind@main
+          export PATH="$(go env GOPATH)/bin:${PATH}"
           sudo apt update -y
           sudo apt install patch -y
-          pushd ./k8s-local-dev
-            ./k8s-local-dev kindnetd
-          popd
-          pushd ./main
-            mkdir -p downloads
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+         chmod 700 get_helm.sh
+         ./get_helm.sh
+         pushd ./k8s-local-dev
+             ./k8s-local-dev kindnetd
+         popd
+         pushd ./main
+           mkdir -p downloads
             go get github.com/moby/spdystream
             go get github.com/thekubeworld/k8devel/pkg/client 
             go get github.com/gookit/color
             go get github.com/sirupsen/logrus
             go run ./tests/clusterip/main.go #&> downloads/output_kubeproxy_iptables_clusterip.log
-          popd
-      - uses: actions/upload-artifact@v2
-        with:
-          name: logs
-          path: ./main/downloads/
-          retention-days: 60
+         popd
