--- a/.github/workflows/iptables_kubeproxy_clusterip.yml
+++ b/.github/workflows/iptables_kubeproxy_clusterip.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-           path: main
+           path: /home/runner/work/_temp/
 
         # Setup Go
       - name: Setup Go
@@ -30,14 +30,16 @@ jobs:
           export PATH="$(go env GOPATH)/bin:${PATH}"
           sudo apt update -y
           sudo apt install patch -y
-          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+          pushd /home/runner/work/_temp/
+            curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
+          popd 
+
           pushd ./k8s-local-dev
              ./k8s-local-dev kindnetd
           popd
-          pushd ./main
-            mkdir -p downloads
+          pushd ./home/runner/work/_temp/
             go get github.com/moby/spdystream
             go get github.com/thekubeworld/k8devel/pkg/client 
             go get github.com/gookit/color
